Реализация бота с детальной обработкой категорий

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,7 @@ springdoc:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui.html
+telegram:
+  bot:
+    name: News_recommendations_bot
+    token: 7738264458:AAEf1mmSBXFdFWS6SjYvfnvYxfe9vvZn4HU
