--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,16 +13,16 @@ telegram:
 spring:
   application:
     name: HomeWork
-  datasource:
-    url: jdbc:postgresql://localhost:5432/postgress
-    username: postgress
-    password: password
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/postgress
+#    username: postgress
+#    password: password
+#    driver-class-name: org.postgresql.Driver
+#  jpa:
+#    database-platform: org.hibernate.dialect.PostgreSQLDialect
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
