--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
-version: '3.8'
-
-services:
-  postgres:
-    image: postgres:16
-    container_name: my_postgres
-    restart: always
-    environment:
-      POSTGRES_DB: postgress
-      POSTGRES_USER: postgress
-      POSTGRES_PASSWORD: password
-    ports:
-      - "5432:5432"
-    networks:
-      - my_network
-
-networks:
-  my_network:
-    driver: bridge
+#version: '3.8'
+#
+#services:
+#  postgres:
+#    image: postgres:16
+#    container_name: my_postgres
+#    restart: always
+#    environment:
+#      POSTGRES_DB: postgress
+#      POSTGRES_USER: postgress
+#      POSTGRES_PASSWORD: password
+#    ports:
+#      - "5432:5432"
+#    networks:
+#      - my_network
+#
+#networks:
+#  my_network:
+#    driver: bridge
