--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ springdoc:
     path: /swagger-ui.html
 telegram:
   bot:
-    name: project_mts2_bot
-    token: 7823152476:AAEvfULCTjabyDnuBH9z6li7RkovjvZWCgg
+    name: News_recommendations_bot
+    token: 7738264458:AAEf1mmSBXFdFWS6SjYvfnvYxfe9vvZn4HU
 
 spring:
   flyway:
@@ -17,7 +17,7 @@ spring:
     name: HomeWork
   datasource:
     url: jdbc:postgresql://localhost:5432/postgress
-    username: postgress
+    username: postgres
     password: password
     driver-class-name: org.postgresql.Driver
   jpa:
