--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: my_postgres
     restart: always
     environment:
-      POSTGRES_DB: postgress
-      POSTGRES_USER: postgress
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
