--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,6 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
